@@ -19,27 +19,10 @@
 # Start Script for the CATALINA Server
 # -----------------------------------------------------------------------------
 
-# InGrid specific settings
-export CATALINA_HOME=.
-
-# include default options, i.e. debug, jmx and jvm options
-if [ -f $CATALINA_HOME/bin/env.user.sh ]; then
-  eval "`sh $CATALINA_HOME/bin/env.user.sh`"
-elif [ -f $CATALINA_HOME/bin/env.sh ]; then
-  eval "`sh $CATALINA_HOME/bin/env.sh`"
-fi
-
-# NOTICE: Option -XX:MaxPermSize is deprecated in Java 8 !
-# We use this one if Java 7 is used. In Java 8 we do not need to manage PermSize and this option is ignored.
-export JAVA_OPTS="$INGRID_OPTS -XX:MaxPermSize=256m"
-
 # Better OS/400 detection: see Bugzilla 31132
 os400=false
-darwin=false
 case "`uname`" in
-CYGWIN*) cygwin=true;;
 OS400*) os400=true;;
-Darwin*) darwin=true;;
 esac
 
 # resolve links - $0 may be a softlink
